--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
    <li><a href="html/page_Symbol.html">Symbol</a></li>
    <li><a href="html/page_SymCount.html">SymCount</a></li> 
    <li><a href="html/page_FeedBuf.html">FeedBuf</a></li>   
-   <li><a href="html/page_ForLoop.html">ForLoop</a></li> -----
+   <li><a href="html/page_ForLoop.html">ForLoop</a></li> 
+   -----
    <li><a href="html/page_PrintStem.html">PrintStem</a></li>
    <li><a href="html/page_CapString.html">CapString</a></li>
    <li><a href="html/page_MakeString.html">MakeString</a></li>
@@ -196,7 +197,8 @@
    <li><a href="html/page_CompactNodeAllocator.html">Compact node allocator</a></li>
    <li><a href="html/page_CompactLists.html">Compact lists</a></li>
    <li><a href="html/page_CompactMaps.html">Compact maps</a></li> 
-   <li><a href="html/page_UIntSlowMulAlgo.html">Unsigned multiplication and division</a></li> -----
+   <li><a href="html/page_UIntSlowMulAlgo.html">Unsigned multiplication and division</a></li> 
+   -----
    <li><a href="html/page_AutoGlobal.html">AutoGlobal</a></li>
    <li><a href="html/page_MakeFileName.html">MakeFileName</a></li>
    <li><a href="html/page_StrMap.html">StrMap</a></li>
@@ -214,7 +216,8 @@
 
  <li>Applied
   <ol>
-   <li><a href="html/page_ToMemBase.html">ToMemBase</a></li> -----
+   <li><a href="html/page_ToMemBase.html">ToMemBase</a></li> 
+   -----
    <li><a href="html/page_FileName.html">FileName</a></li>
    <li><a href="html/page_FileNameMatch.html">FileNameMatch</a></li>
    <li><a href="html/page_StrToChar.html">StrToChar</a></li>
