--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
  <li>Preliminary considerations
   <ol>
-   <li><a href="html/page_Metaphysics.html">Metaphysics of the programming</a>
+   <li><a href="html/page_Metaphysics.html">Metaphysics of the programming</a></li>
    <li><a href="html/page_Taxonomy.html">Taxonomy of classes</a></li>
    <li><a href="html/page_CCoreGeneral.html"><b>CCore</b> general</a></li>
   </ol>
@@ -253,17 +253,19 @@
    <li><a href="html/page_MultiEvent.html">MultiEvent</a></li>
    <li><a href="html/page_AntiSem.html">AntiSem</a></li>
    <li><a href="html/page_ResSem.html">ResSem</a></li>
-   <li>HCore-specific</li>
+   <li>HCore-specific
     <ol>
      <li><a href="html/page_SlowSem.html">SlowSem</a></li>
     </ol>
-   <li>XCore-specific</li>
+   </li>
+   <li>XCore-specific
     <ol>
      <li><a href="html/page_Tick.html">TickCount and TickJob</a></li>
      <li><a href="html/page_Ticker.html">Ticker and TimedTrigger</a></li>
      <li><a href="html/page_ForcedTimeout.html">ForcedTimeout</a></li>
      <li><a href="html/page_TaskMonitor.html">TaskMonitor</a></li>
     </ol>
+   </li>
    <li><a href="html/page_PerTask.html">PerTask</a></li>
    <li><a href="html/page_TaskHeap.html">TaskHeap</a></li>
    <li><a href="html/page_TaskMemStack.html">TaskMemStack</a></li>
