--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta name="keywords" content="C++,real-time,C++14,CCore">
 <meta name="author" content="Sergey Strukov">
 
- <title>CCore 3.xx</title>
+ <title>CCore 3-xx table of content</title>
 
  <link href="html/CCore.css" rel="stylesheet" type="text/css">
 
