--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 <h1>CCore</h1>
 
+<p><a href="html/page_CCoreCover.html">CCore cover</a></p>
+
 <ol class="Content">
 
  <li><a href="html/page_Introduction.html">Introduction</a></li>
