--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
    <li><a href="html/page_PrintRatio.html">PrintRatio</a></li>
    <li><a href="html/page_ErrorText.html">ErrorText</a></li>
    <li><a href="html/page_SymPart.html">SymPart</a></li>
+   <li><a href="html/page_MemberFold.html">MemberFold</a></li>
   </ol>
  </li>
 
