--- a/html/page_APRTest.html
+++ b/html/page_APRTest.html
@@ -49,7 +49,9 @@ enum <span class="Att">TestResult</span>
   NoPrime,
   HasDivisor,
   HardCase,
-  TooLarge
+  TooLarge,
+
+  ExFlag
  };
 
 const char * GetTextDesc(TestResult res);
@@ -187,6 +189,10 @@ a very rare case.
 
 <p>
 <b>TooLarge</b> means the number is above the test cap.
+</p>
+
+<p>
+<b>ExFlag</b> means an exception had been thrown in a parallel test.
 </p>
 
 <p>
