--- a/html/page_DDLEngine.html
+++ b/html/page_DDLEngine.html
@@ -1083,10 +1083,21 @@ class <span class="Att">TypedMap</span> : NoCopy
    void operator () (void *mem);
    
    template &lt;class T&gt;
-   T * findConst(StrLen name);
+   T * findConst(StrLen name) const;
    
    template &lt;class T&gt;
-   T takeConst(StrLen name);
+   T takeConst(StrLen name) const;
+
+   template &lt;class T,FuncInitArgType&lt;T *&gt; FuncInit&gt;
+   auto applyForType(FuncInit func_init) const;
+
+   template &lt;class ... TT&gt; class Filter;
+
+   template &lt;class ... TT&gt;
+   auto getFilter() const;
+
+   template &lt;class F,class FuncInit&gt;
+   auto applyFor(F filter,FuncInit func_init) const;
  };
 
 </pre>
@@ -1110,6 +1121,23 @@ The type is specified as the template parameter.
 In this case you always get a value of some C++ type, compatible with the <b>DDL</b> type.
 These types are available from the <b>ddl/DDLMapTypes.h</b> include file.
 </p>
+
+<p>
+You can enumerate all constants to select those with given type(s).
+</p>
+
+<p>
+<b>applyForType&lt;T&gt;()</b> applies the functor to all constants of the given type. 
+Functor is called with a pointer to an object.
+</p>
+
+<p>
+<b>applyFor()</b> applies the polymorphic functor to all constants of the given types.
+Functor is called with a pointer to an object. The set of types is determined by the <b>filter</b>.
+A filter can be create by the method <b>getFilter()</b>.
+</p>
+
+<h4>Type mapping</h4>
 
 <p>
 For integral types the compatible type is an integral C++ type. I.e. <b>uint8</b> is mapped as <b>uint8</b> etc.
