--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
    <li><a href="html/page_ErrorText.html">ErrorText</a></li>
    <li><a href="html/page_SymPart.html">SymPart</a></li>
    <li><a href="html/page_MemberFold.html">MemberFold</a></li>
+   <li><a href="html/page_OptMember.html">OptMember</a></li>
   </ol>
  </li>
 
