--- a/html/page_HCoreTargets.html
+++ b/html/page_HCoreTargets.html
@@ -72,6 +72,7 @@ features to your target by adding extra source files.
         <a href="page_HCore_SysTime.html">SysTime.h</a>
         <a href="page_HCore_SysTlsSlot.html">SysTlsSlot.h</a>
         <a href="page_HCore_SysWait.html">SysWait.h</a>
+        <a href="page_HCore_SysSpawn.html">SysSpawn.h</a>
     <b>src</b>
       <b>base</b>
         PlatformBase.cpp
@@ -86,6 +87,7 @@ features to your target by adding extra source files.
         SysError.cpp
         SysFile.cpp
         SysFileSystem.cpp
+        SysLaunchPath.cpp
         SysMemPage.cpp
         SysNet.cpp
         SysPlanInit.cpp
@@ -95,7 +97,7 @@ features to your target by adding extra source files.
         SysTime.cpp
         SysTlsSlot.cpp
         SysWait.cpp
-        SysLaunchPath.cpp
+        SysSpawn.cpp
       <a href="page_HCore_PlanInit_CCore.html">PlanInit_CCore.cpp</a>
     <b>test</b>
       test6XXX.NNN.cpp
