--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@
   </ol>
  </li>
 
+ <li><a href="html/page_SpawnProcess.html">HCore process spawning</a></li>
+
  <li>XCore files
   <ol>
    <li><a href="html/page_DefaultFileDevice.html">DefaultFileDevice</a></li>
@@ -426,6 +428,7 @@
    <li><a href="html/page_HCore_SysTime.html">SysTime</a></li>
    <li><a href="html/page_HCore_SysTlsSlot.html">SysTlsSlot</a></li>
    <li><a href="html/page_HCore_SysWait.html">SysWait</a></li>
+   <li><a href="html/page_HCore_SysSpawn.html">SysSpawn</a></li>
    <li><a href="html/page_HCore_PlanInit_CCore.html">PlanInit_CCore</a></li>
   </ol>
  </li>
