--- a/html/page_SpawnProcess.html
+++ b/html/page_SpawnProcess.html
@@ -32,6 +32,7 @@
 
 <p>
 This part is a collection of tools to spawn child processes. 
+It's implemented using the <a href="page_HCore_SysSpawn.html">target support</a>.
 </p>
 
 <pre>
