--- a/index.html
+++ b/index.html
@@ -481,6 +481,8 @@
    <li><a href="html/page_PTPSecureClient.html">PTPSecureClient</a></li>
    <li><a href="html/page_UtilVolume.html">Volume</a></li>
    <li><a href="html/page_tool_MakeString.html">MakeString</a></li>
+   <li>vmake</li>
+   <li>VMakeList</li>
   </ol>
  </li>
 
@@ -496,7 +498,9 @@
    <li>RandomId</li>
    <li>Sample</li>
    <li>SubLab</li>
+   <li>TruePrime</li>
    <li>UserPreference</li>
+   <li>WinLab</li>
    <li>Zipmap</li>
   </ol>
  </li>
