--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
    <li><a href="html/page_SymPart.html">SymPart</a></li>
    <li><a href="html/page_MemberFold.html">MemberFold</a></li>
    <li><a href="html/page_OptMember.html">OptMember</a></li>
+   <li><a href="html/page_ScanRange.html">ScanRange</a></li>
   </ol>
  </li>
 
