--- a/index.html
+++ b/index.html
@@ -484,6 +484,7 @@
    <li><a href="html/page_tool_MakeString.html">MakeString</a></li>
    <li>vmake</li>
    <li>VMakeList</li>
+   <li>VMakeDep</li>
   </ol>
  </li>
 
