--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
    <li><a href="html/page_BinaryFile.html">BinaryFile</a></li>
    <li><a href="html/page_DecodeFile.html">DecodeFile</a></li>
    <li><a href="html/page_LaunchPath.html">LaunchPath</a></li>
+   <li><a href="html/page_ExpandWildcard.html">ExpandWildcard</a></li>
   </ol>
  </li>
 
