--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
    <li><a href="html/page_MemberFold.html">MemberFold</a></li>
    <li><a href="html/page_OptMember.html">OptMember</a></li>
    <li><a href="html/page_ScanRange.html">ScanRange</a></li>
+   <li><a href="html/page_CmdlineParser.html">CmdlineParser</a></li>
   </ol>
  </li>
 
