--- a/html/page_CCoreCover.html
+++ b/html/page_CCoreCover.html
@@ -34,7 +34,7 @@
 
 <p class="c2">Sergey Strukov 2019, version 3-xx</p>
 
-<p class="c2">Copyright Â© 2019, Sergey Strukov. All rights reserved.</p>
+<p class="c2">Copyright © 2019, Sergey Strukov. All rights reserved.</p>
 
 <p>
 This document is public. 
