--- a/html/page_Installation.html
+++ b/html/page_Installation.html
@@ -28,7 +28,7 @@
 
 <h1>CCore installation</h1>
 
-<h2>Cook book (updated according the latest cygwin and CCore-3.00 development)</h2>
+<h2>Cook book (updated according the latest cygwin and CCore-3.xx development)</h2>
 
 <p>
 
